Oeganize previous elements, Add recipe elements
i first put img element underneath title, then added recipe elements

--- a/recipes/lamb-shawarma.html
+++ b/recipes/lamb-shawarma.html
@@ -13,15 +13,64 @@
 		Lamb Shawarma
 	</h1>
 
+	<img
+		src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9325729.jpg&w=595&h=595&c=sc&poi=face&q=60"
+		alt="">
+
 	<p>
 		This is a wonderful Middle Eastern dish that I was introduced to by a friend of mine from Lebanon. This recipe
 		yields an absolutely amazing tasting and tender final product. Shawarma can be used in pitas, be put on fattoush, on
 		hommus, or eaten plain.
 	</p>
 
-	<img
-		src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9325729.jpg&w=595&h=595&c=sc&poi=face&q=60"
-		alt="">
+	<h2>Ingredients</h2>
+
+	<h3>Steps</h3>
+	<ul>
+		<li>
+			½ cup plain yogurt
+		</li>
+		<li>
+			¼ cup water
+		</li>
+		<li>
+			2 tablespoons fresh lemon juice
+		</li>
+		<li>
+			1 tablespoon distilled white vinegar
+		</li>
+		<li>
+			1 tablespoon olive oil
+		</li>
+		<li>
+			½ cup chopped onion
+		</li>
+		<li>
+			2 cloves garlic, minced
+		</li>
+		<li>
+			1 tablespoon salt
+		</li>
+		<li>
+			½ teaspoon ground black pepper
+		</li>
+		<li>
+			½ teaspoon ground cumin
+		</li>
+		<li>
+			⅛ teaspoon ground nutmeg
+		</li>
+		<li>
+			¾ teaspoon ground mace
+		</li>
+		<li>
+			1 teaspoon cayenne pepper
+		</li>
+		<li>
+			5 pounds boneless lamb shoulder, cut into 1/4-inch-thick strips
+		</li>
+	</ul>
+
 
 </body>
 
