Add link for new recipe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 	<h1>
 		Odin Recipes
 	</h1>
-	<a href="recipes/lamb-shawarma.html">Lamp Shawarma</a>
+	<ul>
+		<a href="recipes/lamb-shawarma.html">Lamp Shawarma</a>
+		<a href="recipes/pita-bread.html">Pita bread</a>
+	</ul>
 </body>
 
 </html>
