--- a/recipes/lamb-shawarma.html
+++ b/recipes/lamb-shawarma.html
@@ -25,6 +25,52 @@
 
 	<h2>Ingredients</h2>
 
+	<ul>
+		<li>
+			½ cup plain yogurt
+		</li>
+		<li>
+			¼ cup water
+		</li>
+		<li>
+			2 tablespoons fresh lemon juice
+		</li>
+		<li>
+			1 tablespoon distilled white vinegar
+		</li>
+		<li>
+			1 tablespoon olive oil
+		</li>
+		<li>
+			½ cup chopped onion
+		</li>
+		<li>
+			2 cloves garlic, minced
+		</li>
+		<li>
+			1 tablespoon salt
+		</li>
+		<li>
+			½ teaspoon ground black pepper
+		</li>
+		<li>
+			½ teaspoon ground cumin
+		</li>
+		<li>
+			⅛ teaspoon ground nutmeg
+		</li>
+		<li>
+			¾ teaspoon ground mace
+		</li>
+		<li>
+			1 teaspoon cayenne pepper
+		</li>
+		<li>
+			5 pounds boneless lamb shoulder, cut into 1/4-inch-thick strips
+		</li>
+	</ul>
+
+
 	<h3>Steps</h3>
 	<ul>
 		<li>
