Add HTML boilerplate, Add recipe elements

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<ul>
 		<a href="recipes/lamb-shawarma.html">Lamp Shawarma</a>
 		<a href="recipes/pita-bread.html">Pita bread</a>
+		<a href="recipes/french-toast.html">French Toast</a>
 	</ul>
 </body>
 
