adding li elements to anchor tags

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		Odin Recipes
 	</h1>
 	<ul>
-		<a href="recipes/lamb-shawarma.html">Lamp Shawarma</a>
-		<a href="recipes/pita-bread.html">Pita bread</a>
-		<a href="recipes/french-toast.html">French Toast</a>
+		<li><a href="recipes/lamb-shawarma.html">Lamp Shawarma</a></li>
+		<li><a href="recipes/pita-bread.html">Pita bread</a></li>
+		<li><a href="recipes/french-toast.html">French Toast</a></li>
 	</ul>
 </body>
 
